--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+div {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  display: flex;
+  align-content: space-between;
+  /* Main has 2 items distributed on each side of the main axis with remaining space in the middle */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.li {
+  display: flex;
+  flex-direction: column;
+}
+
+hgroup {
+  display: flex;
+  cursor: pointer;
+}
+
+#profile {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 20%;
+  /* Profile is the left box. It puts items within a column. It's set to not grow, shrink by a ratio of one compared to other items, and ideally take 20% of the space available, once its size has been decided by its content.*/
+}
+
+#artworkList {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 80%;
+  /* Artworklist is the right box. It puts items within a column. It's set to not grow and shrink where possible. Ideally, the space taken by artworklist should be 80% */
+}
+
+#bigParagraph {
+  max-width: 400px;
+  /* A big paragraph from the profile component. Overtakes artworkList space if not managed here. MaxWidth can be set up as fixed e.g. 400px, min-content (it takes the size of the largest element, a word, in it), max-content. */
+  overflow-wrap: break-word;
+  /* Makes sure that big word in the paragraph actually breaks */
 }
